--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <p>We accept fewer than 5% of inbound inquiries. Please provide details regarding your strategic requirements.</p>
                 <br>
                 <p><strong>Office:</strong> Nashik, India</p>
-                <p><strong>Email:</strong> office@vivariumstrategy.in</p>
+                <p><strong>Email:</strong> vivariumstrategy@gmail.com</p>
             </div>
             
             <div class="contact-form-box">
@@ -317,3 +317,4 @@
 
 </body>
 </html>
+
