--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <meta property="og:title" content="VIVARIUM STRATEGY | We Architect Legacy">
     <meta property="og:description" content="Proprietary consulting for Anti-Fragility. Architecting legacy through institutional-grade system design.">
-    <meta property="og:image" content="vivarium logo.jpeg">
+    <meta property="og:image" content="logo.jpeg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.vivariumstrategy.in/">
 
@@ -226,3 +226,4 @@
 
 </body>
 </html>
+
