--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
     <section class="leadership-section">
         <div class="leader-img">
             <!-- Replace with your actual image file name -->
-            <img src="https://via.placeholder.com/400x500/333/fff?text=Srujan+Dhawale" alt="Srujan Dhawale">
+            <img src="My Photo.png" alt="Srujan Dhawale">
         </div>
         <div class="leader-info">
             <h2>Srujan Dhawale</h2>
